[package]
authors     = [ "Ajuna Network <https://github.com/ajuna-network>" ]
description = "Ajuna Network pallet matchmaker for creating matches between players."
edition     = "2021"
homepage    = "https://ajuna.io"
license     = "Apache-2.0"
name        = "pallet-ajuna-matchmaker"
repository  = "https://github.com/ajuna-network/Ajuna"
version     = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
ajuna-common = { default-features = false, path = "../../ajuna-common" }
codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = ["derive"], version = "2.1" }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[features]
default     = [ "std" ]
std         = [ "ajuna-common/std", "codec/std", "scale-info/std", "frame-support/std", "frame-system/std", "sp-std/std" ]
try-runtime = [ "frame-support/try-runtime" ]
