[package]
description = "Ajuna Network pallet used to handle the transformation of Game Assets into an NFT-ready format"
name        = "pallet-ajuna-nft-staking"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec      = { default-features = false, features = [ "derive", "max-encoded-len" ], package = "parity-scale-codec", version = "3.0.0" }
hex        = { default-features = false, version = "0.4", optional = true }
scale-info = { default-features = false, features = [ "derive" ], version = "2.1.1" }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", optional = true }
frame-support      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
frame-system       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io              = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-runtime         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-std             = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-nfts     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

[features]
default = [ "std" ]
runtime-benchmarks = [ "frame-benchmarking", "hex/alloc" ]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-nfts/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
]
try-runtime = [ "frame-support/try-runtime" ]
