[package]
description = "Ajuna Network pallet used to handle the transformation of Game Assets into an NFT-ready format"
name        = "pallet-ajuna-nft-transfer"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec      = { default-features = false, features = [ "derive", "max-encoded-len" ], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = [ "derive" ], version = "2.1.1" }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-nfts     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-io           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

[features]
default = [ "std" ]
runtime-benchmarks = [ "pallet-nfts/runtime-benchmarks" ]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
]
try-runtime = [ "frame-support/try-runtime" ]
