[package]
authors    = [ "Ajuna Network <https://github.com/ajuna-network>" ]
edition    = "2021"
name       = "bajun-runtime"
repository = "https://github.com/ajuna-network/Ajuna"
version    = "0.1.10"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[dependencies]
codec       = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "derive" ] }
hex-literal = { version = "0.3.4", optional = true }
log         = { version = "0.4.16", default-features = false }
scale-info  = { version = "2.1.1", default-features = false, features = [ "derive" ] }
serde       = { version = "1.0.132", optional = true, features = [ "derive" ] }
smallvec    = "1.6.1"

# Local
ajuna-primitives = { default-features = false, path = "../../primitives" }

# ORML
orml-vesting = { git = "https://github.com/ajuna-network/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.37" }

# Substrate
frame-benchmarking                         = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
frame-executive                            = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-support                              = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-system                               = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-system-benchmarking                  = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
frame-system-rpc-runtime-api               = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-try-runtime                          = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
pallet-aura                                = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-authorship                          = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-balances                            = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-collective                          = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-identity                            = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-membership                          = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-multisig                            = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-nfts                                = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-preimage                            = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-proxy                               = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-randomness-collective-flip          = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-scheduler                           = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-session                             = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-sudo                                = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-timestamp                           = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-transaction-payment                 = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-treasury                            = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
pallet-utility                             = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-api                                     = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-block-builder                           = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-consensus-aura                          = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-core                                    = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-inherents                               = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-io                                      = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-offchain                                = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-runtime                                 = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-session                                 = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-std                                     = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-transaction-pool                        = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-version                                 = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

# Polkadot
pallet-xcm              = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }
polkadot-parachain      = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }
xcm                     = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }
xcm-builder             = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }
xcm-executor            = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37" }

# Cumulus
cumulus-pallet-aura-ext             = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-pallet-dmp-queue            = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-pallet-parachain-system     = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37", version = "3.0.0" }
cumulus-pallet-xcm                  = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-pallet-xcmp-queue           = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-primitives-core             = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-primitives-timestamp        = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
cumulus-primitives-utility          = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
pallet-collator-selection           = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }
parachain-info                      = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }

# Ajuna pallets
pallet-ajuna-awesome-avatars = { default-features = false, path = "../../pallets/ajuna-awesome-avatars" }
pallet-ajuna-nft-transfer    = { default-features = false, path = "../../pallets/ajuna-nft-transfer" }
pallet-ajuna-nft-staking     = { default-features = false, path = "../../pallets/nft-staking" }

[features]
default = [
    "std",
]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "serde",
    "ajuna-primitives/std",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-timestamp/std",
    "cumulus-primitives-utility/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "orml-vesting/std",
    "pallet-ajuna-awesome-avatars/std",
    "pallet-ajuna-nft-transfer/std",
    "pallet-ajuna-nft-staking/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-collective/std",
    "pallet-collator-selection/std",
    "pallet-identity/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-nfts/std",
    "pallet-ajuna-nft-transfer/std",
    "pallet-preimage/std",
    "pallet-proxy/std",
    "pallet-randomness-collective-flip/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-treasury/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-utility/std",
    "pallet-xcm/std",
    "parachain-info/std",
    "polkadot-parachain/std",
    "polkadot-runtime-common/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "xcm/std",
]

runtime-benchmarks = [
    "hex-literal",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collator-selection/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "cumulus-pallet-session-benchmarking/runtime-benchmarks",
    "cumulus-pallet-xcmp-queue/runtime-benchmarks",
    "pallet-ajuna-awesome-avatars/runtime-benchmarks",
    "pallet-ajuna-nft-transfer/runtime-benchmarks",
    "pallet-ajuna-nft-staking/runtime-benchmarks",
]

try-runtime = [
    "cumulus-pallet-aura-ext/try-runtime",
    "cumulus-pallet-dmp-queue/try-runtime",
    "cumulus-pallet-parachain-system/try-runtime",
    "cumulus-pallet-xcm/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "orml-vesting/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-collator-selection/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-membership/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-nfts/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-randomness-collective-flip/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-session/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-xcm/try-runtime",
    "parachain-info/try-runtime",
    "pallet-ajuna-awesome-avatars/try-runtime",
    "pallet-ajuna-nft-transfer/try-runtime",
    "pallet-ajuna-nft-staking/try-runtime",
]
